--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=index.pdf">
-    <title>Redirecting...</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
 </head>
-<body>
-    <p>If the PDF doesn't open, <a href="index.pdf">click here</a>.</p>
+<body style="margin: 0; padding: 0; overflow: hidden;">
+    <embed src="index.pdf" type="application/pdf" width="100%" height="100vh" />
 </body>
 </html>
