--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
-<body style="margin: 0; padding: 0; overflow: hidden;">
-    <embed src="index.pdf" type="application/pdf" width="100%" height="100vh" />
+<body>
+    <iframe src="index.pdf"></iframe>
 </body>
 </html>
